--- a/README.html
+++ b/README.html
@@ -378,8 +378,11 @@ RSTUDIO DESKTOP”, and then at the bottom of the next page, click the
 .dmg file on your computer; double-click it to open; and then drag and
 drop it to your applications folder.</p>
 </div>
-<div id="now-you-are-ready-to-take-the-first-class-and-run-the-scripts" class="section level1">
-<h1>Now you are ready to take the first class and run the scripts</h1>
+<div id="now-you-are-ready-to-take-the-first-class-and-run-the-scripts." class="section level1">
+<h1>Now you are ready to take the first class and run the scripts.</h1>
+</div>
+<div id="new-name" class="section level1">
+<h1>new name</h1>
 </div>
 
 
